--- a/index.html
+++ b/index.html
@@ -3,38 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Umbala Food</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>🍔 Umbala Food</h1>
-    <p>Ngon – Rẻ – Nhanh chóng!</p>
-  </header>
-
-  <section class="menu">
-    <h2>Thực đơn hôm nay</h2>
-    <div class="food-list">
-      <div class="food-item">
-        <img src="https://via.placeholder.com/150" alt="Cơm gà">
-        <h3>Cơm gà</h3>
-        <p>45.000đ</p>
-      </div>
-      <div class="food-item">
-        <img src="https://via.placeholder.com/150" alt="Phở bò">
-        <h3>Phở bò</h3>
-        <p>40.000đ</p>
-      </div>
-      <div class="food-item">
-        <img src="https://via.placeholder.com/150" alt="Bún chả">
-        <h3>Bún chả</h3>
-        <p>35.000đ</p>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <p>📍 123 Đường ABC, Quận 1, TP.HCM</p>
-    <p>📞 0909 999 999</p>
-  </footer>
+  <h1>Xin chào!</h1>
+  <p>Chào mừng đến với cửa hàng Umbala Food</p>
 </body>
 </html>
