--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         <ul class="copyright">
           <li>&copy; Trần Đăng Khoa</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
+        <ul class="icons">
+          <li><a href="/admin/" class="icon solid fa-user-shield"><span class="label">Admin</span></a></li>
+        </ul>
       </section>
     </section>
 
