--- a/admin/index.html
+++ b/admin/index.html
@@ -1,15 +1,27 @@
-<h2>Đăng nhập admin</h2>
-<input type="password" id="pwd" placeholder="Nhập mật khẩu">
-<button onclick="login()">Đăng nhập</button>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Admin Login</title>
+  <link rel="stylesheet" href="/assets/css/style.css">
+</head>
+<body>
+  <div class="menu">
+    <h2>Đăng nhập admin</h2>
+    <input type="password" id="pwd" placeholder="Nhập mật khẩu">
+    <button onclick="login()">Đăng nhập</button>
+  </div>
 
-<script>
-function login() {
-  const pass = document.getElementById('pwd').value;
-  if (pass === 'admin123') {
-    localStorage.setItem('admin', '1');
-    location.href = '/admin/dashboard.html';
-  } else {
-    alert('Sai mật khẩu!');
-  }
-}
-</script>
+  <script>
+    function login() {
+      const pass = document.getElementById('pwd').value;
+      if (pass === 'admin123') {
+        localStorage.setItem('admin', '1');
+        location.href = '/admin/dashboard.html';
+      } else {
+        alert('Sai mật khẩu!');
+      }
+    }
+  </script>
+</body>
+</html>
