--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -1,7 +1,21 @@
-<script>
-if (localStorage.getItem('admin') !== '1') {
-  alert("Bạn không có quyền truy cập!");
-  location.href = '/admin/index.html';
-}
-</script>
-<h1>Chào mừng Admin!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Dashboard</title>
+  <link rel="stylesheet" href="/assets/css/style.css">
+</head>
+<body>
+  <script>
+    if (localStorage.getItem('admin') !== '1') {
+      alert("Bạn không có quyền truy cập!");
+      location.href = '/admin/index.html';
+    }
+  </script>
+
+  <div class="menu">
+    <h1>Chào mừng Admin!</h1>
+    <p>Bạn đã đăng nhập thành công.</p>
+  </div>
+</body>
+</html>
