--- a/admin/index.html
+++ b/admin/index.html
@@ -15,7 +15,7 @@
   <script>
     function login() {
       const pass = document.getElementById('pwd').value;
-      if (pass === 'admin123') {
+      if (pass === 'admin') {
         localStorage.setItem('admin', '1');
         location.href = '/admin/dashboard.html';
       } else {
